--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2021"
 bitflags = "1.3.2"
 byteorder = "1.4.3"
 libc = "0.2.126"
+tokio = { version = "1", optional = true, features = ["fs", "io-util"]}
+
+[features]
+tokio = ["dep:tokio"]
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"]}
